updated portfolio without footer and my project caed

--- a/src/Assets/css/BaseTheme.css
+++ b/src/Assets/css/BaseTheme.css
@@ -4,6 +4,7 @@
     --white: #ffffff;
     --orange: #FD6F00;
     --secondary: #7C7C7C;
+    --muted: #424242;
     --cyan: #61706F;
     --btnLightBackground: #F8F8F8;
     --btnLightBorder: #545454;
