--- a/src/Assets/css/Style.css
+++ b/src/Assets/css/Style.css
@@ -1,3 +1,7 @@
+*,body {
+    font-family: 'poppins-regular';
+}
+
 /* Header */
 .navbar {
     background-color: var(--white) !important;
@@ -71,6 +75,23 @@
     color: var(--white);
 }
 
+.btn-light {
+    background-color: var(--btnLightBackground);
+    border: 1px solid var(--btnLightBorder);
+    color: var(--black);
+}
+
+.btn-radius {
+    border-radius: 8px !important;
+}
+
+
+.btn-round{
+    padding: 7px 28px;
+    border-radius: 8px !important;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+}
+
 
 /* profile circle */
 .outer-circle {
@@ -99,7 +120,7 @@
 /* social-Media icons */
 .social-media-icons {
     display: flex;
-    gap: 8px;
+    gap: 20px;
 }
 
 /* progress Bar */
@@ -113,15 +134,22 @@
     position: relative;
 }
 
-/* .progress-bar::after {
-    content: '';
-    position: absolute;
-    right: 20px;
-    width: 12px;
-    height: 12px;
-    background-color: #007bff;
-    border-radius: 50%;
-    box-shadow: inset 0 -6px 6px 0 rgba(82, 71, 71, 0.47);
+/* #progress-handle {
+    display: block;
+    position:absolute;
+    z-index: 1;
+    margin-top: -5px;
+    margin-left: -10px;
+    width: 10px;
+    height: 10px;
+    border: 4px solid #D3D5DF;
+    border-top-color: #D3D5DF;
+    border-right-color: #D3D5DF;
+    transform: rotate(45deg);
+    border-radius: 100%;
+    background-color: #fff;
+    box-shadow: 0 1px 6px rgba(0, 0, 0, .2);
+    cursor:pointer;
 } */
 
 
@@ -136,4 +164,31 @@
 
 .service-card .card-body{
     padding: 32px 16px;
+}
+
+
+/* project-card */
+
+.project-card {
+    border-radius: 12px;
+}
+
+.project-card .card-body:hover {
+    
+}
+
+.project-card .card-body .card-link {
+    position: absolute;
+}
+
+.project-card .card-body img {
+    height: 300px;
+    border-radius: 10px;
+}
+
+/* form input */
+
+.form-control{
+    display: inline-block;
+    width: unset;
 }
