--- a/src/Assets/css/Style.css
+++ b/src/Assets/css/Style.css
@@ -1,4 +1,5 @@
-*,body {
+*,
+body {
     font-family: 'poppins-regular';
 }
 
@@ -86,7 +87,7 @@
 }
 
 
-.btn-round{
+.btn-round {
     padding: 7px 28px;
     border-radius: 8px !important;
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
@@ -100,12 +101,13 @@
     height: 350px;
     border-radius: 50%;
     background: linear-gradient(0deg, #ffffff 0%, #ff8233 100%);
-    box-shadow: inset 0 -6px 6px 0 rgba(82, 71, 71, 0.47);
+    box-shadow: inset 0 -4px 14px 0 rgb(244 247 253);
+    /* box-shadow: inset 0 -6px 6px 0 rgba(82, 71, 71, 0.47); */
     border: 1px solid #ffffff;
     display: flex;
     align-items: center;
     justify-content: center;
-    transform: rotate(181deg);
+    /* transform: rotate(180deg); */
 }
 
 .inner-circle {
@@ -115,6 +117,9 @@
     border-radius: 50%;
     background-color: #ffffff;
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    background-image: url('../images/Bala.jpg');
+    background-size: cover;
+    background-position: center;
 }
 
 /* social-Media icons */
@@ -154,59 +159,133 @@
 
 
 /* Services -card */
-
-.service-card{
+.service-card {
     border: 0;
     border-radius: 6px;
     background-color: var(--cardBackground);
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.service-card .card-body{
+.service-card:hover {
+    cursor: pointer;
+}
+
+.service-card .card-body {
     padding: 32px 16px;
 }
 
+.wrapper:hover>*:not(:hover) {
+    filter: blur(5px);
+    opacity: 0.5;
+    transition: all 0.3s ease;
+}
+
+.wrapper>* {
+    transition: all 0.3s ease;
+}
 
 /* project-card */
-
 .project-card {
-    border-radius: 12px;
-}
-
-.project-card .card-body:hover {
-    
-}
-
-.project-card .card-body .card-link {
-    position: absolute;
-}
-
-.project-card .card-body img {
-    height: 300px;
     border-radius: 10px;
+    border: 0;
+}
+.project-card .card-inner {
+    padding: 0;
+    position: relative;
+}
+.project-card .box {
+    width: 100%;
+    height: 100%;
+    background: #fff;
+    border-radius: 1.25rem;
+    overflow: hidden;
+}
+.project-card .imgBox img {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+}
+.project-card .imgBox {
+    transition: .5s ease-in-out;
+}
+.project-card .imgBox:hover {
+    scale: 1.1;
+}
+.project-card .card-inner:hover .icon {
+    z-index: 1;
+    transition: 0.3s ease-in-out;
+}
+.project-card .icon {
+    position: absolute;
+    bottom: -0.375rem;
+    right: -0.375rem;
+    background-color: var(--white);
+    width: 6rem;
+    height: 6rem;
+    border-top-left-radius: 50%;
+    z-index: -1;
+}
+.project-card .iconBox {
+    position: absolute;
+    inset: 0.625rem;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 0.3s;
+}
+.project-card .iconBox span {
+    color: #fff;
+    font-size: 1.5rem;
+    transform: rotate(330deg);
+}
+.project-card .icon::before {
+    position: absolute;
+    content: "";
+    bottom: 0.375rem;
+    left: -1.25rem;
+    background: transparent;
+    width: 1.25rem;
+    height: 1.25rem;
+    border-bottom-right-radius: 1.25rem;
+    box-shadow: 0.313rem 0.313rem 0 0.313rem;
+    color: var(--white);
+}
+.project-card .icon::after {
+    position: absolute;
+    content: "";
+    top: -1.25rem;
+    right: 0.375rem;
+    background: transparent;
+    width: 1.25rem;
+    height: 1.25rem;
+    border-bottom-right-radius: 1.25rem;
+    box-shadow: 0.313rem 0.313rem 0 0.313rem var(--white);
+}
+.project-card .icon:hover .iconBox {
+    scale: 1.1;
 }
 
 /* form input */
-
-.form-control{
+.form-control {
     display: inline-block;
     width: unset;
 }
 
+
 /* Footer */
 .footer {
     width: 100%;
- }
+    position: fixed;
+    bottom: 0;
+}
 
-.footer-top{
+.footer-top {
     background-color: var(--btnLightBackground);
-    padding: 200px 0px;
+    padding: 60px 0px;
 }
 
-.footer-bottom{
+.footer-bottom {
     background-color: var(--btnLightBorder);
-    padding: 25px 0;
+    padding: 14px 0;
 }
-
-
-  
