--- a/src/Assets/css/Style.css
+++ b/src/Assets/css/Style.css
@@ -164,6 +164,7 @@ body {
     border-radius: 6px;
     background-color: var(--cardBackground);
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    height: 100%;
 }
 
 .service-card:hover {
@@ -188,11 +189,17 @@ body {
 .project-card {
     border-radius: 10px;
     border: 0;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 }
 .project-card .card-inner {
     padding: 0;
     position: relative;
 }
+
+.project-card:has(.card-inner:hover) {
+    box-shadow: none;
+}
+
 .project-card .box {
     width: 100%;
     height: 100%;
